# RealityLens-DEMO

./: .gitignore  Info.plist  README.md  build_all.py  build_log.txt  entitlements.plist  main.py  pyproject.toml  requirements.txt  version.txt
Android_App/: README.md
Android_App/Android/: README.md  settings.gradle
Android_App/Android/app/: build.gradle
Android_App/Android/app/src/androidTest/java/com/example/snipping/: ExampleInstrumentedTest.java
Android_App/Android/app/src/main/: AndroidManifest.xml
Android_App/Android/app/src/main/res/drawable/: ai_chat_bubble_bg.xml  result_card_inner_bg.xml  top_glow_overlay.xml  user_chat_bubble_bg.xml
Android_App/Android/app/src/main/res/layout/: activity_chat.xml  activity_main.xml  item_chat_ai.xml  item_chat_user.xml
Android_App/Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android_App/Android/app/src/main/res/values-night/: themes.xml
Android_App/Android/gradle/: libs.versions.toml
Android_App/Android/gradle/wrapper/: gradle-wrapper.properties
Double_model_ai/: README.md  ai_client_double_model.py  doctor.py  main.py
Double_model_ai/ui/: components.py
backend/: README.md  app.py
backend/ui/: components.py
frontend_reality_lens/: package-lock.json
frontend_reality_lens/src/: index.css
frontend_reality_lens/src/components/: CTASection.jsx  HeroSection.jsx
server-connected-app/: main.py
server-connected-app/ui/: components.py
src/: README.md  ai_client.py  check.py  doctor.py  main.py  test_ai.py  testing_ai.py
src/ui/: components.py  style.qss
(+14 files in other folders)
